--- a/styl/index.styl
+++ b/styl/index.styl
@@ -1,6 +1,6 @@
 
 
-.switcher__widgets {
+.switch__widgets {
   width: 100%;
   height: 100%;
 
@@ -10,6 +10,6 @@
   }
 }
 
-.switcher__widgets--hidden {
+.switch__widgets--hidden {
   display: none;
 }
