--- a/styl/index.styl
+++ b/styl/index.styl
@@ -3,6 +3,9 @@
 .switch__widgets {
   width: 100%;
   height: 100%;
+  opacity: 1;
+  transition-duration: 1s;
+  transition-property: opacity;
 
   .widget__wrapper {
     width: 100%;
@@ -11,5 +14,5 @@
 }
 
 .switch__widgets--hidden {
-  display: none;
+  opacity: 0;
 }
